<resources>

    <string name="app_name">KBF App</string>

    <!-- Laurence Brenner -->

    <!-- API Keys -->

    <string name="places_api_key">AIzaSyBFBxngZf2dx1CXSXpYbh-_fPNnDDRGR9Y</string>
    <string name="directions_api_key">AIzaSyBFBxngZf2dx1CXSXpYbh-_fPNnDDRGR9Y</string>

    <!-- Allgemein (mehrmal benutzt) -->

    <string name="Einstellungen">Einstellungen</string>
    <string name="KBF_Logo">KBF Logo</string>

    <!-- Login Screen Strings (Fahrer / Unternehmen / Registrierung) -->
    <string name="LoginFürUnternehmer">Für Unternehmer</string>

    <string name="LoginUnternehmerLogin">Unternehmer-Login</string>
    <string name="LoginFahrerLogin">Fahrer-Login</string>

    <string name="LoginAnmelden">Anmelden</string>
    <string name="LoginRegistrierung">Noch kein Mitglied ? Registrieren Sie sich !</string>
    <string name="LoginPasswortVergessen">Passwort vergessen ?</string>

    <string name="Registrierung">Registrierung</string>
    <string name="Registrieren">Registrieren</string>
    <string name="backToLogin">Schon Mitglied ? Loggen Sie sich ein</string>


    <string name="Email">E-Mail</string>
    <string name="Passwort">Passwort</string>

    <string name="Unternehmerkonto">Unternehmerkonto</string>
    <string name="Fahrerkonto">Fahrerkonto</string>
    <string name="Reg_VorUndNachname">Vor- und Nachname</string>
    <string name="Reg_StraßeHausnummer">Straße (mit Hausnummer)</string>
    <string name="Reg_Postleitzahl">Postleitzahl</string>
    <string name="Reg_PasswortBestaetigen">Passwort bestätigen</string>

    <!-- /Laurence Brenner -->

    <!-- Unternehmerstartseite -->

    <string name="Fahrten">Fahrten</string>
    <string name="Mitarbeiteransicht">Mitarbeiteransicht</string>
    <string name="Fahrerkonten">Fahrerkonten</string>
    <string name="Rechnungen">Rechnungen</string>
    <string name="Archiv">Archiv</string>

    <!-- Fragmente -->

    <string name="Fahrer">Fahrer</string>
    <string name="NeueFahrt">Neue Fahrt</string>
    <string name="MeineFahrten">Meine Fahrten</string>
    <string name="Kontakt">Kontakt</string>
    <string name="Hilfe_Faq">Hilfe / FAQ</string>
    <string name="Impressum">Impressum</string>
    <string name="Info">Info</string>
    <string name="Sonstiges">Sonstiges</string>
    <string name="Navigation">Navigation</string>
    <string name="Krankenbefoerderung">Krankenbeförderung</string>

    <!-- Temp -->

    <string name="fahrer_muhammed_arslan">Fahrer: Muhammed Arslan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Test">Testing</string>
    <string name="SidebarTest">SidebarTesting</string>

    <!-- Placeholder (ersetzen durch loginabhängige Daten) -->

    <!-- Konto Fahrer -->
    <string name="konto_fahrer_name">Muhammed Arslan</string>
    <string name="konto_fahrer_unternehmensname">Hallo Taxi</string>
    <string name="konto_fahrer_nummer">#3811</string>

    <!-- Konto Unternehmer -->
    <string name="konto_unternehmer_name">Max Mustermann</string>
    <string name="konto_unternehmer_unternehmensname">Hallo Taxi</string>
    <string name="konto_unternehmer_unternehmensnummer">3811</string>
    <string name="title_activity_fahrer_startseite">Map</string>
    <string name="PasswortAendern">Bestätigungsmail schicken</string>
    <string name="PasswortZuruecksenden">Passwort zurücksetzen</string>
    <string name="loginWithNewPassword">Loggen Sie sich ein</string>
    <string name="_10_12_2020_10_38_name_mustermann">10.12.2020 10:38 Name: Mustermann</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>


</resources>