<?xml version="1.0" encoding="utf-8"?>

<!-- Erstellt von David Medic-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.hsh.f4.mc.kbfapp.Registrierung">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/montserrat"
        android:onClick="onLogin"
        android:text="@string/RegToLogin"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat"
        android:backgroundTint="@color/White"
        android:text="@string/Registrieren"
        android:textColor="@color/Orange"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonVornameNachname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Reg_VorUndNachname"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:autofillHints="Fullname" />

            <EditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:autofillHints="E-Mail"/>

            <EditText
                android:id="@+id/editTextTextAdresseStraße"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Reg_StraßeHausnummer"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:autofillHints="Adress"/>

            <EditText
                android:id="@+id/editTextTextAdressePostleitzahl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Reg_Postleitzahl"
                android:inputType="number"
                android:padding="12dp"
                android:autofillHints="Adress2"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Passwort"
                android:inputType="textPassword"
                android:padding="12dp"
                android:autofillHints="Password"/>

            <EditText
                android:id="@+id/editTextTextPasswordBestaetigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Reg_PasswortBestaetigen"
                android:inputType="textPassword"
                android:padding="12dp"
                android:autofillHints="Password"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewLoginRegistrierung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Registrierung"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewRegLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_kbf"
        android:contentDescription="@string/KBF_Logo" />

    <!-- Laurence Brenner -->

    <CheckBox
        android:id="@+id/checkBoxRegFahrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:buttonTint="@color/White"
        android:text="@string/Fahrerkonto"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxRegUnternehmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:buttonTint="@color/White"
        android:text="@string/Unternehmerkonto"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
