<?xml version="1.0" encoding="utf-8"?>

<!-- Erstellt von David Medic-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="de.hsh.f4.mc.kbfapp.UnternehmerFahrerkonten">

    <Button
        android:id="@+id/buttonUReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Registrieren"
        android:textColor="@color/Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonUReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonVornameNachname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Reg_VorUndNachname"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <EditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/editTextTextAdresseStraße"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Reg_StraßeHausnummer"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <EditText
                android:id="@+id/editTextTextAdressePostleitzahl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Reg_Postleitzahl"
                android:inputType="number"
                android:padding="12dp" />

            <EditText
                android:id="@+id/editTextTextUnternehmennummer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="Unternehmensnummer"
                android:inputType="text"
                android:padding="12dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="Hier können Sie Konten für ihre MItarbeiter erstellen."
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Erstellt von David Medic-->