<?xml version="1.0" encoding="utf-8"?>

<!-- Muhammed Arslan -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_profile_fahrer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true"/>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/imageProfile"
        app:layout_constraintEnd_toEndOf="@id/imageProfile"
        app:layout_constraintStart_toStartOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile"/>

    <TextView
        android:id="@+id/textViewfName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/konto_fahrer_name"
        android:textColor="@color/Yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintStart_toEndOf="@id/imageProfile" />

    <!-- Laurence Brenner -->

    <TextView
        android:id="@+id/textViewfUnternehmen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/konto_fahrer_unternehmensname"
        android:textColor="@color/Green"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter" />

    <TextView
        android:id="@+id/textViewfUnternehmenNummer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/konto_fahrer_nummer"
        android:textColor="@color/Grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewfUnternehmen"
        app:layout_constraintStart_toEndOf="@+id/textViewfUnternehmen"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter" />

</androidx.constraintlayout.widget.ConstraintLayout>